  performance.
* Display names for `@ParameterizedClass` and `@ParameterizedTest` now consistently style
  name-value pairs for arguments using `name = value` formatting – for example,
  `fruit{nbsp}={nbsp}apple` instead of `fruit=apple`.
* Text-based arguments in display names for parameterized tests are now quoted by default.
  In addition, special characters are escaped within quoted text. Please refer to the
  xref:writing-tests/parameterized-classes-and-tests.adoc#tests-display-names-quoted-text[User Guide] for details.
* xref:writing-tests/parameterized-classes-and-tests.adoc#tests-argument-conversion-implicit-fallback[Fallback String-to-Object Conversion] for parameterized tests now supports factory
  methods and factory constructors that accept a single `CharSequence` argument in
  addition to the existing support for factories that accept a single `String` argument.
* The `Arguments` interface for parameterized tests is now officially a
  `@FunctionalInterface`.
* Kotlin's `suspend` modifier may now be applied to test and lifecycle methods.
* New `computeIfAbsent(...)` methods in `ExtensionContext.Store` to simplify working
  with non-nullable types.
* Reason strings supplied to `ConditionEvaluationResult` APIs are now officially declared
  as `@Nullable`.


[[v6.0.0-junit-vintage]]
=== JUnit Vintage

[[v6.0.0-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* The JUnit Vintage test engine is now deprecated and will report an INFO level discovery
  issue if it finds at least one JUnit 4 test class. The deprecation warning is intended
  to clarify the purpose of the engine: it should only be used temporarily while migrating
  tests to JUnit Jupiter or another testing framework with native JUnit Platform support.

[[v6.0.0-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* Cancellation support for the Vintage test engine.