@@ -161,7 +161,7 @@ is as follows:
 
 The JUnit project uses the `@API` annotation from [API Guardian](https://github.com/apiguardian-team/apiguardian).
 Publicly available interfaces, classes, and methods have a defined lifecycle
-which is described in detail in the [User Guide](https://docs.junit.org/current/user-guide/#api-evolution).
+which is described in detail in the [User Guide](https://docs.junit.org/current/api-evolution.html).
 
 That following describes the deprecation process followed for API items.
 
