@@ -21,6 +21,6 @@
     </dd>
 </dl>
 
-<p>Already consulted the <a href="../user-guide/index.html">JUnit User Guide</a>?</p>
+<p>Already consulted the <a href="../overview.html">JUnit User Guide</a>?</p>
 
 </body>
