@@ -5,4 +5,4 @@ or [Gradle]. Please refer to the [User Guide] for details.
 
 [Maven]:      https://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#Importing_Dependencies
 [Gradle]:     https://docs.gradle.org/current/userguide/platforms.html#sub:bom_import
-[User Guide]: https://docs.junit.org/current/user-guide/#dependency-metadata-junit-bom
+[User Guide]: https://docs.junit.org/current/appendix.html#dependency-metadata-junit-bom
