@@ -46,7 +46,7 @@ public class TestDiscoveryOptionsMixin {
 	SelectorOptions selectorOptions;
 
 	@ArgGroup(validate = false, order = 3, heading = "%n  For more information on selectors including syntax examples, see"
-			+ "%n  @|underline https://docs.junit.org/${junit.docs.version}/user-guide/#running-tests-discovery-selectors|@"
+			+ "%n  @|underline https://docs.junit.org/${junit.docs.version}/running-tests/discovery-selectors.html|@"
 			+ "%n%n@|bold FILTERS|@%n%n")
 	FilterOptions filterOptions;
 
